Browser Security Updates - Changes done

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
 
       <div class="footer-col footer-col-1">
         <ul class="social-media-list">
-		  <li><b>NotSoSecure</b></li>
-		  <li><a href="{{ site.companyurl }}">{{ site.companytitle }}</a></li>
+		  <li><b>Follow NotSoSecure</b></li>
+		  <!--<li><a href="{{ site.companyurl }}">{{ site.companytitle }}</a></li>-->
           {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
@@ -33,11 +33,11 @@
 	  <div class="footer-col footer-col-2">
         <ul class="contact-list">
 		  <li><b>Credits</b></li>
-		  {% if site.credit-name1 %}<li><a href="mailto:{{ site.credit-email1 }}">{{ site.credit-name1 }}</a></li>{% endif %}
-		  {% if site.credit-name2 %}<li><a href="mailto:{{ site.credit-email2 }}">{{ site.credit-name2 }}</a></li>{% endif %}
-		  {% if site.credit-name3 %}<li><a href="mailto:{{ site.credit-email3 }}">{{ site.credit-name3 }}</a></li>{% endif %}
-		  {% if site.credit-name4 %}<li><a href="mailto:{{ site.credit-email4 }}">{{ site.credit-name4 }}</a></li>{% endif %}
-		  {% if site.credit-name5 %}<li><a href="mailto:{{ site.credit-email5 }}">{{ site.credit-name5 }}</a></li>{% endif %}
+		  {% if site.credit-name1 %}<li><a href="{{ site.credit-link1 }}">{{ site.credit-name1 }}</a></li>{% endif %}
+		  {% if site.credit-name2 %}<li><a href="{{ site.credit-link2 }}">{{ site.credit-name2 }}</a></li>{% endif %}
+		  {% if site.credit-name3 %}<li><a href="{{ site.credit-link3 }}">{{ site.credit-name3 }}</a></li>{% endif %}
+		  {% if site.credit-name4 %}<li><a href="{{ site.credit-link4 }}">{{ site.credit-name4 }}</a></li>{% endif %}
+		  {% if site.credit-name5 %}<li><a href="{{ site.credit-link5 }}">{{ site.credit-name5 }}</a></li>{% endif %}
         </ul>
       </div>
 	  
