--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,5 +13,4 @@ layout: default
 
 </article>
 
-<br/>
-<a href={{ site.url }}>Listing page</a>
+Access the <a href={{ site.url }}>Listing page</a> now. 
