--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
       </div>
 
 	  <div class="footer-col footer-col-2">
-        <ul class="contact-list">
+<!--        <ul class="contact-list">
 		  <li><b>Credits</b></li>
 		  {% if site.credit-name1 %}<li><a href="{{ site.credit-link1 }}">{{ site.credit-name1 }}</a></li>{% endif %}
 		  {% if site.credit-name2 %}<li><a href="{{ site.credit-link2 }}">{{ site.credit-name2 }}</a></li>{% endif %}
@@ -39,15 +39,18 @@
 		  {% if site.credit-name4 %}<li><a href="{{ site.credit-link4 }}">{{ site.credit-name4 }}</a></li>{% endif %}
 		  {% if site.credit-name5 %}<li><a href="{{ site.credit-link5 }}">{{ site.credit-name5 }}</a></li>{% endif %}
         </ul>
+-->
       </div>
 	  
       <div class="footer-col footer-col-3">
-		<ul class="contact-list">
+<!--		<ul class="contact-list">
 		  <li><b>Project Description</b></li>
 		  <li>{{ site.description }}</li>
 		</ul>
       </div>
-    </div>
+
+-->   <a href=""><img src="/images/nss-ccs-logo.png"></a><br/><center>&copy; Powered by NotSoSecure Global Services</center>
+ </div>
 
   </div>
 
