--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,3 +204,78 @@ pre {
         }
     }
 }
+
+
+
+/*Custom tabling for lists*/
+table {
+  margin: auto;
+  /*border-top: 1px solid #666;
+  border-bottom: 1px solid #666;*/
+  border-spacing: 0em;
+}
+table thead th { border-bottom: 1px solid #ddd; background-color:#5e9dc8; color:White; }
+th, td { padding: 5px; }
+thead, tfoot, tr:nth-child(odd) { background: #F5F1DE; }
+
+th.first_element{
+  border-radius: 15px 0 0 0;
+}
+
+th.last_element {
+  border-radius: 0 15px 0 0;
+}
+
+tr:hover{background-color:#aac2c3;color:White}
+
+/* 
+Max width before this PARTICULAR table gets nasty
+This query will take effect for any screen smaller than 760px
+and also iPads specifically.
+*/
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+  /* Force table to not be like tables anymore */
+  table, thead, tbody, th, td, tr { 
+    display: block; 
+  }
+  
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr { 
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  
+  tr { border: 1px solid #ccc; }
+  
+  td { 
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee; 
+    position: relative;
+    padding-left: 20%; 
+  }
+  
+  td:before { 
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 20%; 
+    padding-right: 10px; 
+    white-space: nowrap;
+  }
+
+
+  
+  /*
+  Label the data
+  */
+  td:nth-of-type(1):before { content: "Title"; }
+  td:nth-of-type(2):before { content: "Description"; }
+  td:nth-of-type(3):before { content: "Browser(s)"; }
+}
