--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -214,19 +214,20 @@ table {
   border-bottom: 1px solid #666;*/
   border-spacing: 0em;
 }
-table thead th { border-bottom: 1px solid #ddd; background-color:#5e9dc8; color:White; }
+table thead th { border-bottom: 1px solid #ddd; background-color:#899499; color:#FFFFFF; }
 th, td { padding: 5px; }
-thead, tfoot, tr:nth-child(odd) { background: #F5F1DE; }
+thead, tfoot, tr:nth-child(odd) { background: #E5E4E2; color:#000000; }
+tr:nth-child(even) { background: #FAF9F6; color:#000000; }
 
 th.first_element{
-  border-radius: 15px 0 0 0;
+  border-radius: 12px 0 0 0;
 }
 
 th.last_element {
-  border-radius: 0 15px 0 0;
+  border-radius: 0 12px 0 0;
 }
 
-tr:hover{background-color:#aac2c3;color:White}
+tr:hover{background-color:#D3D3D3; color:#36454F; }
 
 /* 
 Max width before this PARTICULAR table gets nasty
