--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,7 @@
 		</ul>
       </div>
 
--->   <a href=""><img src="/images/nss-ccs-logo.png"></a><br/><center>&copy; Powered by NotSoSecure Global Services</center>
+-->   <a href="https://notsosecure.com" target="_blank"><img src="/images/nss-ccs-logo.png"></a><br/><center>&copy; Powered by NotSoSecure Global Services</center>
  </div>
 
   </div>
