logo fix and link to sourcE

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,18 +5,12 @@
     <!--<h2 class="footer-heading">{{ site.companytitle }}</h2>-->
 
     <div class="footer-col-wrapper">
-      <!--<div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li><a href="{{ site.companyurl }}">{{ site.companytitle }}</a></li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>-->
+
 
       <div class="footer-col footer-col-1">
         <ul class="social-media-list">
 		  <li><b>Follow NotSoSecure</b></li>
-		  <!--<li><a href="{{ site.companyurl }}">{{ site.companytitle }}</a></li>-->
-          {% if site.github_username %}
+	        {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
           </li>
@@ -31,25 +25,12 @@
       </div>
 
 	  <div class="footer-col footer-col-2">
-<!--        <ul class="contact-list">
-		  <li><b>Credits</b></li>
-		  {% if site.credit-name1 %}<li><a href="{{ site.credit-link1 }}">{{ site.credit-name1 }}</a></li>{% endif %}
-		  {% if site.credit-name2 %}<li><a href="{{ site.credit-link2 }}">{{ site.credit-name2 }}</a></li>{% endif %}
-		  {% if site.credit-name3 %}<li><a href="{{ site.credit-link3 }}">{{ site.credit-name3 }}</a></li>{% endif %}
-		  {% if site.credit-name4 %}<li><a href="{{ site.credit-link4 }}">{{ site.credit-name4 }}</a></li>{% endif %}
-		  {% if site.credit-name5 %}<li><a href="{{ site.credit-link5 }}">{{ site.credit-name5 }}</a></li>{% endif %}
-        </ul>
--->
+
       </div>
 	  
       <div class="footer-col footer-col-3">
-<!--		<ul class="contact-list">
-		  <li><b>Project Description</b></li>
-		  <li>{{ site.description }}</li>
-		</ul>
-      </div>
 
--->   <a href="https://notsosecure.com" target="_blank"><img src="{{ '/images/nss-ccs-logo.png' | prepend: site.baseurl }}"></a><br/><center>&copy; Powered by NotSoSecure Global Services</center>
+ <a href="https://notsosecure.com" target="_blank"><img src="{{ '/images/nss-ccs-logo.png' | prepend: site.baseurl }}"></a><br/><center>&copy; Powered by NotSoSecure Global Services</center>
  </div>
 
   </div>
