--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
-        <a class="page-link" href="https://github.com/NotSoSecure/browser-security-enhancements">Github</a>
+        <a class="page-link" target="_blank" href="https://github.com/NotSoSecure/browser-security-enhancements">Github</a>
       </div>
     </nav>
 
