--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,4 +13,4 @@ layout: default
 
 </article>
 
-Access the <a href={{ site.url }}>Listing page</a> now. 
+Access the <a href={{ site.url | append: site.baseurl }}>Listing page</a> now. 
