--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,4 +15,4 @@ layout: default
 </article>
 
 <br/>
-<a href={{ site.url }}>Back to listing page</a>
+<a href={{ site.url | append: site.baseurl }}>Back to listing page</a>
